# mysteries

./: .env  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  ERROR_ANALYSIS.md  NEXT_STEPS.md  README.md  RELEASE_NOTES.md  VoidTextureSynth.vst3_20250801T122942.586+0200.txt  buildlog.txt  validation_final.txt  validation_output.txt  validation_synth1.txt  validation_synth1_correct.txt
.github/workflows/: build.yml
docs/copilot-history/: 2025-08-01-custom-tabbed-interface.md  README.md
src/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Core/: Analyzer.cpp  Analyzer.h  MidiLearn.cpp  PerformanceOverlay.cpp  PerformanceOverlay.h  UnitTest.cpp
src/DSP/FX/: BitCrusherFX.h  DelayFX.h  ReverbFX.h
src/Engines/: GranularEngine.cpp  GranularEngine.h  SynthEngine1.cpp  SynthEngine1.h  WavetableEngine.cpp  WavetableEngine.h
src/FX/: BitCrusher.cpp  BitCrusher.h  Delay.cpp  Delay.h  Reverb.cpp  Reverb.h
src/GUI/: ADSRComponent.h  AdvancedPanel.cpp  AdvancedPanel.h  ControlPane.cpp  ControlPane.h  DisplayArea.cpp  DisplayArea.h  EngineDisplay.cpp  EngineDisplay.h  MacroPanel.cpp  MacroPanel.h  MainDisplay.cpp  MainDisplay.h  OrbVisualizer.cpp  OrbVisualizer.h  SynthEngine1Panel.cpp  SynthEngine1Panel.h  VoidLookAndFeel.cpp  VoidLookAndFeel.h  WaveformDisplay.cpp  WaveformDisplay.h
src/Modulation/: ChaosGen.cpp  ChaosGen.h  ModMatrix.cpp  ModMatrix.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
src/Synth/: NoiseLayer.cpp  NoiseLayer.h  OscillatorLayer.cpp  OscillatorLayer.h  SamplerLayer.cpp  SamplerLayer.h  SubLayer.cpp  SubLayer.h
